manifests/lidarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: lidarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.cowlab.org`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
  # tls:
  #   secretName: cowlab-production-tls
